@@ -60,6 +60,9 @@ Fixes:
  * Fix an off-by-one error in wrap(). Report by Padraic, patch by Minion [MG]
  * Sorting code didn't do proper objid checks, so setinter(#1:123, #1:456)
    would return #1:123 instead of nothing. [MG]
+ * The Can_spoof power was only aliased to Can_nspemit (its original name)
+   in upgraded dbs, not in new games created from minimal db. Reported by
+   Ben Ramsey. [MG]
 
 Version 1.8.4 patchlevel 6                                 Jul 29,  2011
 
